lattests/good/my_tests/test_tescik.err
ERROR

Semantic error at line 46 :
     Class 'list' not declared.
